--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-
 <html>
- 
-  <h1>My First Heading</h1>
-
-  <p>My first paragraph.</p>
-
+  <head>
+   <link rel="stylesheet" href="style.css">  
+  </head>
+  <body>
+   <h1>My First Heading</h1>
+   <p>My first paragraph.</p>
+  </body>
 </html>
