--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
    <link rel="stylesheet" href="style.css">  
   </head>
   <body>
-   <h1>My First Heading</h1>
-   <p>My first paragraph.</p>
+    <div class="basic-container">
+      <h1>Network Security Project</h1>
+      <p>...</p>
+    </div>
   </body>
 </html>
