--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
    <link rel="stylesheet" href="style.css">  
   </head>
   <body>
-    <div class="basic-container">
-      <h1>Network Security Project</h1>
-      <p>...</p>
+    <div class="container">
+     <div class="outline">
+       <h1>Network Security Project</h1>
+        <p>...</p>
+      </div>
     </div>
   </body>
 </html>
