--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <div class="container">
      <div class="outline">
        <h1>Network Security Project</h1>
+       <div</div>
         <p>...</p>
       </div>
     </div>
