--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
   <body>
     <div class="container">
      <div class="outline">
-       <h1>Network Security Project</h1>
-       <div</div>
-        <p>...</p>
+        <div>
+          <h1>Network Security Project</h1>
+          <p>...</p>
+        </div>
       </div>
     </div>
   </body>
