--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <div class="container">
      <div class="outline">
         <div>
-          <h1>Network Security Project</h1>
+          <h1>Place Holder</h1>
           <p>...</p>
         </div>
       </div>
